--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "china-area-data": "^4.0.0"
     }
 }
