--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
+        "china-area-data": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7",
-        "china-area-data": "^4.0.0"
+        "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "sweetalert": "^2.1.0"
     }
 }
