--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Overxue\\weather\\": "./src"
+            "Overxue\\Weather\\": "./src"
         }
     }
 }
