--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=69a94463968af686ca06",
+    "/css/app.css": "/css/app.css?id=4d6422fe1cd9e6984cda"
 }
