--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "5.7.*",
         "laravel/horizon": "~1.3",
         "laravel/tinker": "^1.0",
+        "laravolt/avatar": "^2.2",
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
         "overtrue/laravel-lang": "~3.0",
