--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravolt/avatar": "^2.2",
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
+        "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/pinyin": "~3.0",
         "predis/predis": "~1.1",
