--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/horizon": "~1.3",
         "laravel/tinker": "^1.0",
         "laravolt/avatar": "^2.2",
+        "liyu/dingo-serializer-switch": "^0.3.1",
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
         "overtrue/easy-sms": "^1.1",
