--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=958aeb7379448d689ddd",
+    "/css/app.css": "/css/app.css?id=3f9db302f020433d5ae0"
 }
