增加字体图标

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b8d94c30381ca863828d",
+    "/css/app.css": "/css/app.css?id=50481fabea69c1c5c7ad"
 }
