--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "overtrue/pinyin": "~4.0",
         "predis/predis": "~1.1",
         "spatie/laravel-permission": "~3.0",
-        "summerblue/laravel-active": "8.*"
+        "summerblue/laravel-active": "8.*",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.5",
