--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "overtrue/pinyin": "~4.0",
         "predis/predis": "~1.1",
         "spatie/laravel-permission": "~3.0",
+        "spatie/laravel-query-builder": "^3.3",
         "summerblue/laravel-active": "8.*",
         "tymon/jwt-auth": "^1.0"
     },
@@ -37,6 +38,7 @@
         "laravel/ui": "^3.0",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
+        "overtrue/laravel-query-logger": "^2.1",
         "phpunit/phpunit": "^9.3.3",
         "summerblue/generator": "8.*"
     },
